quote color changed yellow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img{
 }
 .quotes {
   font-family: 'Abril Fatface';
-  color: aqua;
+  color: yellow;
   background: #383838;
   font-size: 60px;
 
